fix(dropdowns): misaligned loading indicator; wrong select width

--- a/scss/common/_forms.scss
+++ b/scss/common/_forms.scss
@@ -141,9 +141,16 @@
         .k-clear-value,
         .k-i-loading {
             position: absolute;
-            right: $padding-x;
             top: 50%;
             margin-top: -.5em;
+        }
+
+        .k-clear-value {
+            right: $padding-x;
+        }
+
+        .k-i-loading {
+            right: $padding-x-lg / 2;
         }
 
         .k-clear-value {
